--- a/Lyncas.Api/Lyncas.WebApp/Views/Pessoa/Login.cshtml
+++ b/Lyncas.Api/Lyncas.WebApp/Views/Pessoa/Login.cshtml
@@ -68,7 +68,7 @@
             <!-- div sign up for non-members -->
             <div id="nonMemberText">
                 <p class="normalText">
-                    Not a member? <a href="/form/form.html"> Sign up now</a>
+                    Not a member? <a asp-action="Form"> Sign up now</a>
                 </p>
             </div>
         </div>
