--- a/Lyncas.Api/Lyncas.WebApp/Views/Pessoa/Form.cshtml
+++ b/Lyncas.Api/Lyncas.WebApp/Views/Pessoa/Form.cshtml
@@ -1,8 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model Lyncas.Api.Models.Pessoa
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,6 +8,7 @@
 
     <link rel="stylesheet" href="~/css/form.css">
     <script src="input-mask.js"></script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
@@ -40,7 +37,7 @@
 
 
                     <label for="inputWarning" class="namel">Name</label>
-                    <input id="inputNome" class="inputValid" type="text" placeholder="ex. Lewis" onclick="checkInputs(this)" oninput="checkInputs(this)" required>
+                    <input asp-for="@Model.Nome" id="inputNome" class="inputValid" type="text" placeholder="ex. Lewis" onclick="checkInputs(this)" oninput="checkInputs(this)" required>
                     <span id="asterisk" class="glyphicon glyphicon-asterisk form-control-feedback"></span>
                 </div>
                 <div class="form-group has-feedback">
@@ -226,10 +223,9 @@
                 <div class="selectL">
                     <label for="">Language (STATUS)</label>
                     <select class="inputValid" name="" id="language" required>
-                        <option value="0">Language</option>
-                        <option value="1">English (Active)</option>
-                        <option value="2">Portuguese (Inactive)</option>
-                        <option value="3">Espanish (Suspended)</option>
+                        <option value="Disponível">English (Active)</option>
+                        <option value="Ausente">Portuguese (Inactive)</option>
+                        <option value="Indisponível">Espanish (Suspended)</option>
                     </select>
                 </div>
             </div>
@@ -289,9 +285,7 @@
                 </button>
             </div>
         </footer>
-        <!-- </div> -->
-
     </section>
 </body>
-
 </html>
+<script src="~/js/form.js"></script>
