--- a/Front-end/form/form.css
+++ b/Front-end/form/form.css
@@ -183,7 +183,7 @@ select{
 
 .selectDateD::after{
     content: "\25bc";
-    color: #e84c3d;
+    color: #22bee6;
     font-size: 12px;
     position: absolute;
     line-height: 30px;
@@ -192,7 +192,7 @@ select{
 } 
 .selectDateM::after{
     content: "\25bc";
-    color: #e84c3d;
+    color: #22bee6;
     font-size: 12px;
     position: absolute;
     line-height: 30px;
@@ -201,7 +201,7 @@ select{
 } 
 .selectDateY::after{
     content: "\25bc";
-    color: #e84c3d;
+    color: #22bee6;
     font-size: 12px;
     position: absolute;
     line-height: 30px;
@@ -211,7 +211,7 @@ select{
 
 .selectL::after{
      content: "\25bc";
-    color: #e84c3d;
+    color: #22bee6;
     font-size: 12px;
     position: absolute;
     line-height: 30px;
