funções de ordenação funcionando

--- a/Front-end/dashboard/dashboard.css
+++ b/Front-end/dashboard/dashboard.css
@@ -127,7 +127,7 @@ body{
     margin-right: 0.5em;
 }
 
-.cogIcon, .cancelIcon{
+.cogIcon, .cancelIcon, .fa-sort{
     background-color: transparent;
     margin: 0;
     border: 0;
